# SkillshotLab

./: .gitignore  CMakeLists.txt  README.md
src/: ability.cpp  ability.hpp  app.cpp  app.hpp  geometry.cpp  geometry.hpp  main.cpp  scenario.cpp  scenario.hpp  target.cpp  target.hpp
